--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <resources>
     <string name="app_name">ShoeStore</string>
+
+    <!-- Login fragment-->
     <string name="login_text">Login to Shoe Store</string>
     <string name="login_button_text">Login</string>
     <string name="create_account_button_text">Create Account</string>
     <string name="email_text">Email Address:</string>
     <string name="password_text">Password:</string>
+
+    <!-- Welcome gragment -->
+    <string name="welcome_text">Welcome to the Shoe Store</string>
+    <string name="welcome_description_text">
+        In this app you can view an inventory of shoes,
+        add, update, and remove shoes from that inventory.
+    </string>
 </resources>
