--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="shoe_brand_text">Brand</string>
     <string name="shoe_description_text">Description</string>
     <string name="add_images_button_text">Add Images</string>
+    <string name="instructions_button_text">Instructions</string>
 </resources>
