--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,11 @@
     <string name="app_name">ShoeStore</string>
 
     <!-- Login fragment-->
-    <string name="login_text">Login to Shoe Store</string>
     <string name="login_button_text">Login</string>
     <string name="create_account_button_text">Create Account</string>
     <string name="email_text">Email Address:</string>
     <string name="password_text">Password:</string>
-    <string name="login_label">Login</string>
+    <string name="login_label">Shoe Store</string>
 
     <!-- Welcome fragment -->
     <string name="welcome_text">Welcome to the Shoe Store</string>
